DB entities now inherited by BaseEntity